# Packers

./: .gitignore  CMakeLists.txt  README.md  box.h  hw6.c  pack.c  thread_db.h
Testing/: bcp_15_piece.txt  puzzle4.txt  puzzle6.txt
Testing/Baselines/: puzzle1_solution.txt  puzzle2_solution.txt  puzzle3_solution.txt  puzzle4_solution.txt
Testing/baselines/: puzzle6_solution.txt
tests/: bcp_9_piece.txt  puzzle1.txt  puzzle2.txt  puzzle3.txt  puzzle5.txt  squared_square.txt
tests/baselines/: puzzle1_solutions.txt  puzzle5_solution.txt  puzzle6_solutions.txt
